package logarlec.model.labyrinth;

public interface IHasLocation {
    public Room getLocation();
}
